[package]
name = "bp3d-env"
version = "1.0.2"
authors = ["Yuri Edward <yuri6037@outlook.com>"]
edition = "2021"
description = "Environment utilities with environment override file to support systems with difficult to no access to environment variables."
license = "BSD-3-Clause"
repository = "https://gitlab.com/bp3d/env"
readme = "./README.MD"
keywords = ["bp3d", "env"]
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.10.0"
